-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, jfx11, jfx17, jfx21, jfx22
-
Component/s: javafx
-
b16
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8319349 | jfx21.0.2 | Jayathirth D V | P3 | Resolved | Fixed | b03 |
| JDK-8319458 | 8u411 | Jayathirth D V | P3 | Closed | Fixed | b01 |
In SW pipeline path of Box/Gaussian Blur/Shadow effects we are not checking for range when we read data from the source/destination buffers.
We need to add appropriate range checks in native code also apart from range checks in Java side.
We need to add appropriate range checks in native code also apart from range checks in Java side.
- backported by
-
JDK-8319349 Missing range checks in decora
-
- Resolved
-
-
JDK-8319458 Missing range checks in decora
-
- Closed
-
- links to
-
Commit
openjdk/jfx21u/5f21d465
-
Commit
openjdk/jfx/96e5d10a
-
Review
openjdk/jfx21u/25
-
Review
openjdk/jfx/1272
(1 links to)