8319079: Missing range checks in decora