modules/javafx.graphics/src/main/native-decora/SSEBoxBlurPeer.cc
@@ -38,6 +38,20 @@ Java_com_sun_scenario_effect_impl_sw_sse_SSEBoxBlurPeer_filterHorizontal
      jintArray dstPixels_arr, jint dstw, jint dsth, jint dstscan,
      jintArray srcPixels_arr, jint srcw, jint srch, jint srcscan)
 {
+    if (srcPixels_arr == NULL ||
+        dstPixels_arr == NULL ||
+        srcw <= 0 ||
+        srch <= 0 ||
+        srcw > INT_MAX / srch ||
+        dstw <= 0 ||
+        dsth <= 0 ||
+        dstw > INT_MAX / dsth ||
+        (srcw * srch) > env->GetArrayLength(srcPixels_arr) ||
+        (dstw * dsth) > env->GetArrayLength(dstPixels_arr) ||
+        dsth > srch) { // We should not move out of source vertical bounds
+        return;
+    }
+
     jint *srcPixels = (jint *)env->GetPrimitiveArrayCritical(srcPixels_arr, 0);
     if (srcPixels == NULL) return;
     jint *dstPixels = (jint *)env->GetPrimitiveArrayCritical(dstPixels_arr, 0);
@@ -89,6 +103,20 @@ Java_com_sun_scenario_effect_impl_sw_sse_SSEBoxBlurPeer_filterVertical
      jintArray dstPixels_arr, jint dstw, jint dsth, jint dstscan,
      jintArray srcPixels_arr, jint srcw, jint srch, jint srcscan)
 {
+    if (srcPixels_arr == NULL ||
+        dstPixels_arr == NULL ||
+        srcw <= 0 ||
+        srch <= 0 ||
+        srcw > INT_MAX / srch ||
+        dstw <= 0 ||
+        dsth <= 0 ||
+        dstw > INT_MAX / dsth ||
+        (srcw * srch) > env->GetArrayLength(srcPixels_arr) ||
+        (dstw * dsth) > env->GetArrayLength(dstPixels_arr) ||
+        dstw > srcw) { // We should not move out of source horizontal bounds
+        return;
+    }
+
     jint *srcPixels = (jint *)env->GetPrimitiveArrayCritical(srcPixels_arr, 0);
     if (srcPixels == NULL) return;
     jint *dstPixels = (jint *)env->GetPrimitiveArrayCritical(dstPixels_arr, 0);
@@ -149,6 +177,20 @@ Java_com_sun_scenario_effect_impl_sw_sse_SSEBoxBlurPeer_filterTranspose
      jintArray srcPixels_arr, jint srcw, jint srch, jint srcscan,
      jint ksize)
 {
+    if (srcPixels_arr == NULL ||
+        dstPixels_arr == NULL ||
+        srcw <= 0 ||
+        srch <= 0 ||
+        srcw > INT_MAX / srch ||
+        dstw <= 0 ||
+        dsth <= 0 ||
+        dstw > INT_MAX / dsth ||
+        (srcw * srch) > env->GetArrayLength(srcPixels_arr) ||
+        (dstw * dsth) > env->GetArrayLength(dstPixels_arr) ||
+        dstw > srcw) { // We should not move out of source horizontal bounds
+        return;
+    }
+
     jint *srcPixels = (jint *)env->GetPrimitiveArrayCritical(srcPixels_arr, 0);
     if (srcPixels == NULL) return;
     jint *dstPixels = (jint *)env->GetPrimitiveArrayCritical(dstPixels_arr, 0);
